# esp32c3-playground

./: .gitattributes  .gitignore  Cargo.toml  README.md  breadboard_sketch_fritzing.fzz  build.rs  example.webm  laze-project.yml  secrets.toml.secret
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
patches/esp-hal-smartled/: .cargo_vcs_info.json  .gitignore  Cargo.toml
patches/esp-hal-smartled/src/: lib.rs
src/: buzzer.rs  input.rs  inter_task.rs  keyboard.rs  led.rs  main.rs  pins.rs  touch.rs
src/display/: agm1264f.rs  ili9341.rs  ili9341_async.rs  mod.rs
