[package]
name = "esp32c3-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = ["time", "wifi-esp", "net", "ipv4", "dns", "tcp"], default-features = false }
ariel-os-hal = { path = "build/imports/ariel-os/src/ariel-os-hal" }
embassy-embedded-hal = { version = "0.6", optional = true }
embassy-futures = "0.1"
embassy-sync = { version = "0.8" }
embassy-usb = { version = "0.6", optional = true }
embedded-graphics = "0.8"
embedded-graphics-framebuf = "0.5"
embedded-hal-async = { version = "1", optional = true }
embedded-hal-bus = { version = "0.3" }
esp-hal = { version = "1", features = ["esp32c3", "unstable"] }
esp-hal-buzzer = "0.3"
esp-hal-smartled = { version = "0.17", features = ["esp32c3"] }
heapless = "0.9.3"
libm = "0.2"
mipidsi = "0.10"
nb = "1"
num_enum = { version = "0.7.6", default-features = false }
smart-leds = "0.4"
sky-ili9341 = { version = "0.1", features = ["async", "graphics"], optional = true }

[patch.crates-io]
esp-hal-smartled = { path = "patches/esp-hal-smartled" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }

[features]
async_ili9341 = ["sky-ili9341", "embedded-hal-bus/async", "embedded-hal-async", "embassy-embedded-hal"]
agm1264f = []
# esp32c3 does not support acting as a HID, I will need to try this again with esp32s3
keyboard = ["embassy-usb"]

[build-dependencies]
toml = "1"
embedded-graphics = "0.8"
